# odds-sleuth

./: DEVLOG.md  README.md  main.py  pyproject.toml  requirements.txt  test_tools.py
agent/: math.py  orchestrator.py  tools.py
static/: index.html
